--- a/config/tasks/train/train_resnet.yaml
+++ b/config/tasks/train/train_resnet.yaml
@@ -9,13 +9,13 @@ checkpointing: False
 data_loaders:
   train:
     split_key: train_idxs
-    batch_size: 512
-    num_workers: 4
+    batch_size: 128
+    num_workers: 1
     transforms:
-      - horizontal_flip
-      - vertical_flip
-      - front_back_reflection
+    #  - horizontal_flip
+    #  - vertical_flip
+    #  - front_back_reflection
   validation:
     split_key: val_idxs
-    batch_size: 512
-    num_workers: 4
+    batch_size: 128
+    num_workers: 1
