--- a/config/tasks/evaluate/test.yaml
+++ b/config/tasks/evaluate/test.yaml
@@ -1,5 +1,6 @@
 data_loaders:
   test:
     split_key: test_idxs
-    batch_size: 4096
+    #batch_size: 4096
+    batch_size: 256
     num_workers: 4
