--- a/config/tasks/train/train_resnet.yaml
+++ b/config/tasks/train/train_resnet.yaml
@@ -1,15 +1,17 @@
-epochs: 20
+epochs: 10
+#epochs: 20
 
 report_interval: 100
 val_interval: 100
-num_val_batches: 32
-
+#num_val_batches: 32
+num_val_batches: 256
 checkpointing: False
 
 data_loaders:
   train:
     split_key: train_idxs
-    batch_size: 128
+    #batch_size: 256
+    batch_size: 256
     num_workers: 1
     transforms:
     #  - horizontal_flip
@@ -17,5 +19,6 @@ data_loaders:
     #  - front_back_reflection
   validation:
     split_key: val_idxs
-    batch_size: 128
+    #batch_size: 256
+    batch_size: 32
     num_workers: 1
